--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "q": "^1.4.1"
+  }, 
+  "scripts": {
+    "start":"node app.js", 
+    "dev":"nodemon app.js"
   }
 }
