--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Car build tracker app ",
   "main": "app.js",
   "scripts": {
+    "start": "pm2 start app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -41,6 +42,7 @@
     "mongoose": "^4.4.14",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pm2": "^2.0.15",
     "q": "^1.4.1"
   },
   "devDependencies": {
