--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,13 @@ services:
     web:
         build: .
         ports: 
-            - '8080:8080'
+          - '8080:8080'
         working_dir: '/builtright'
         command: npm run start
         environment: 
-            - EXPRESS_PORT=8080
-            - APP_SECRET=Ra07xv07qjxcvkjajv8c7cq978xfibhkn45jhdoxcb7w
+          - MONGO_URI=mongodb://mongo:27017
+          - EXPRESS_PORT=8080
+          - APP_SECRET=Ra07xv07qjxcvkjajv8c7cq978xfibhkn45jhdoxcb7w
         volumes: 
             - .:/builtright
         links: 
