--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,13 @@
 {
-  "presets": ["react", "es2015", "stage-0"]
+  "presets": [
+    ["es2015", { "modules": false }],
+    "stage-2"
+  ],
+  "plugins": ["transform-runtime"],
+  "comments": false,
+  "env": {
+    "test": {
+      "plugins": [ "istanbul" ]
+    }
+  }
 }
