--- a/client/package.json
+++ b/client/package.json
@@ -1,47 +1,87 @@
 {
-  "name": "mern-starter-client",
+  "name": "vuestic-admin",
   "version": "1.0.0",
-  "description": "Client-side of MERN Starter.",
-  "main": "index.js",
+  "description": "Vue.js admin template",
+  "author": "smartapant <smartapant@gmail.com>",
+  "private": false,
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js,.vue src"
   },
-  "author": "Joshua Slate",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^0.13.1",
-    "lodash": "^4.6.1",
-    "moment": "^2.13.0",
-    "react": "~15.2.1",
-    "react-cookie": "^0.4.7",
-    "react-dom": "~15.2.1",
-    "react-ga": "^1.4.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.6.0",
-    "redux": "^3.5.2",
-    "redux-form": "^6.0.0-rc.3",
-    "redux-thunk": "^2.1.0",
-    "socket.io": "^1.4.6",
-    "socket.io-client": "^1.4.6"
+    "amcharts3": "github:amcharts/amcharts3",
+    "ammap3": "github:amcharts/ammap3",
+    "awesome-bootstrap-checkbox": "^1.0.0-alpha.5",
+    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-vue": "^0.9.0",
+    "chart.js": "^2.6.0",
+    "element-resize-detector": "^1.1.12",
+    "font-awesome": "^4.7.0",
+    "gemini-scrollbar": "^1.5.1",
+    "google-maps": "^3.2.1",
+    "ionicons": "^2.0.1",
+    "kewler": "^1.0.8",
+    "leaflet-map": "^0.2.1",
+    "normalize.css": "^5.0.0",
+    "vee-validate": "2.0.0-rc.7",
+    "vue": "^2.3.0",
+    "vue-bulma-expanding": "0.0.0",
+    "vue-chartjs": "^2.7.1",
+    "vue-router": "^2.2.0",
+    "vue-slider-component": "^2.3.3",
+    "vue2-circle-progress": "^1.0.3",
+    "vuetable-2": "^1.6.5",
+    "vuex": "2.1.1",
+    "vuex-router-sync": "4.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.6.0",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.6.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-register": "^6.22.0",
+    "bootstrap": "4.0.0-alpha.6",
+    "chalk": "^1.1.3",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.14.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^2.0.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.2",
+    "file-loader": "^0.10.0",
+    "friendly-errors-webpack-plugin": "^1.1.3",
+    "function-bind": "^1.1.0",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.3",
+    "node-sass": "^4.5.0",
+    "opn": "^4.0.2",
+    "ora": "^1.1.0",
+    "sass-loader": "^6.0.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "url-loader": "^0.5.7",
+    "vue-loader": "^10.3.0",
+    "vue-style-loader": "^2.0.0",
+    "vue-template-compiler": "^2.3.0",
+    "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.16.1",
+    "webpack-merge": "^2.6.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
