--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -S --ui bdd --require ./tests/spec_helper.js --recursive ./tests --reporter spec",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node"
   },
   "keywords": [
     "mern",
@@ -18,6 +19,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "helmet": "^3.8.1",
     "jsonwebtoken": "^5.7.0",
     "mailchimp-v3": "^1.0.1",
     "mailgun-js": "^0.7.10",
@@ -38,9 +40,10 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
+    "flightplan": "^0.6.17",
     "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "should": "^11.1.1",
-    "supertest": "^2.0.0",
-    "nodemon": "^1.11.0"
+    "supertest": "^2.0.0"
   }
 }
