--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
+    "restful-mongoose": "^1.0.1",
     "sendgrid": "^4.7.1",
     "socket.io": "^1.4.6",
     "stripe": "^4.6.0"
