adding server boot up into mongoose callback

--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "restful-mongoose": "^1.0.1",
     "sendgrid": "^4.7.1",
+    "slug": "^0.9.1",
     "socket.io": "^1.4.6",
     "stripe": "^4.6.0"
   },
