--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern-starter-server",
+  "name": "battlestations",
   "version": "1.0.0",
-  "description": "API server for MERN Starter, powered by Express.",
+  "description": "API server for Battlestations, A Hivemind Apps Platform and Community.",
   "main": "index.js",
   "scripts": {
     "test": "mocha -S --ui bdd --require ./tests/spec_helper.js --recursive ./tests --reporter spec",
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "helmet": "^3.8.1",
@@ -25,6 +26,7 @@
     "mailgun-js": "^0.7.10",
     "moment": "^2.13.0",
     "mongoose": "^4.4.13",
+    "mongoose-searchable": "^1.0.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
