--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.13.0",
     "mongoose": "^4.4.13",
     "mongoose-searchable": "^1.0.0",
+    "mongoose-text-search": "0.0.2",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
