--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -8,9 +8,9 @@
     "mocha": true
   },
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-underscore-dangle": 0,
     "comma-dangle": ["error", {
       "functions": "ignore",
-    }],
-  },
+    }]
+  }
 }
