--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.4",
     "helmet": "^3.8.1",
     "jsonwebtoken": "^5.7.0",
+    "lodash": "^4.17.4",
     "mailchimp-v3": "^1.0.1",
     "mailgun-js": "^0.7.10",
     "moment": "^2.13.0",
