--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "battlestations",
+  "name": "builtright",
   "version": "1.0.0",
-  "description": "API server for Battlestations, A Hivemind Apps Platform and Community.",
+  "description": "API server for BuiltRight, A Hivemind Apps Platform and Community.",
   "main": "index.js",
   "scripts": {
     "test": "mocha -S --ui bdd --require ./tests/spec_helper.js --recursive ./tests --reporter spec",
@@ -9,12 +9,7 @@
     "start": "node",
     "dashboard": "fly dashboard:prod"
   },
-  "keywords": [
-    "mern",
-    "api",
-    "server-side"
-  ],
-  "author": "Joshua Slate",
+  "author": "Dylan Lott",
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -22,7 +17,9 @@
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.12",
     "bunyan-mongodb-logger": "0.0.2",
+    "dotenv": "^4.0.0",
     "express": "^4.13.4",
+    "forest-express-mongoose": "^1.3.0",
     "helmet": "^3.8.1",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.17.4",
