--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.15.0",
     "bunyan": "^1.8.12",
+    "bunyan-lumberjack": "^1.1.3",
     "bunyan-mongodb-logger": "0.0.2",
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
