--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bootstrap-vue": "^0.15.6",
+    "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "popper.js": "^1.12.5",
     "vue": "^2.1.8",
     "vue-router": "^2.1.1",
     "vue-sweetalert": "^0.1.17",
@@ -27,6 +29,7 @@
     "buble-loader": "^0.4.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "dotenv-webpack": "^1.5.4",
     "file-loader": "^0.9.0",
     "flightplan": "^0.6.15",
     "image-webpack-loader": "^3.3.1",
