--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,15 @@ services:
     image: redis
     ports:
       - "6379:6379"
+
+  web:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports: 
+      - "443:443"
+      - "80:80"
+    links:
+      - server:server
+    env_file:
+      - ./client/.env.docker
