--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot --host=0.0.0.0 --port=8081",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build:prod": "npm run build && npm run docker",
     "linter": "./node_modules/.bin/standard ./src/**/*.js",
-    "pushprod": "npm run linter && fly deploy:prod",
+    "pushprod": "npm run linter && npm run build && npm run docker && docker push hivemindapps/builtright-client",
     "pushdev": "npm run linter && fly deploy:dev",
     "deploy": "git push deploy master",
-    "docs": "jsdoc -c ./conf.json && cd out && ws"
+    "docs": "jsdoc -c ./conf.json && cd out && ws",
+    "docker": "docker build -t hivemindapps/builtright-client ."
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -20,6 +22,7 @@
     "moment": "^2.18.1",
     "popper.js": "^1.12.5",
     "vue": "^2.1.8",
+    "vue-gravatar": "^1.1.3",
     "vue-router": "^2.1.1",
     "vue-sweetalert": "^0.1.17",
     "vuex": "^2.1.1"
@@ -40,7 +43,7 @@
     "stylus-loader": "^2.4.0",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.8",
-    "vuetify": "^0.12.1",
+    "vuetify": "^0.15.0",
     "webpack": "^2.2.0-rc.2",
     "webpack-dev-server": "^2.2.0-rc.0"
   }
