--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,10 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot --host=0.0.0.0 --port=8081",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "build:prod": "npm run build && npm run docker",
     "linter": "./node_modules/.bin/standard ./src/**/*.js",
-    "pushprod": "npm run linter && npm run build && npm run docker && docker push hivemindapps/builtright-client",
-    "pushdev": "npm run linter && fly deploy:dev",
-    "deploy": "git push deploy master",
     "docs": "jsdoc -c ./conf.json && cd out && ws",
-    "docker": "docker build -t hivemindapps/builtright-client ."
+    "build:prod": "npm run build && docker build -t hivemindapps/builtright-client .",
+    "deploy": "npm run build:prod && docker push hivemindapps/builtright-client:latest"
   },
   "dependencies": {
     "axios": "^0.15.3",
