--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -5,18 +5,21 @@ services:
     ports:
       - "3000:3000"
     environment:
-      -  
+      - NODE_ENV=production 
     links:
       - mongo:mongo
       - redis:redis
 
   web:
-    image: hivemindapps/builtright-vue:latest 
+    image: hivemindapps/builtright-client:latest 
     ports: 
       - "80:80"
       - "443:443"
     links: 
-      - mongo:mongo
+      - server:server
+    environment:
+      - NODE_ENV=production
+      - API_URL=server:3000
 
   mongo:
     image: bitnami/mongodb
