--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "mailgun-js": "^0.7.10",
     "moment": "^2.13.0",
     "mongoose": "^4.4.13",
+    "mongoose-float": "^1.0.2",
     "mongoose-searchable": "^1.0.0",
     "mongoose-text-search": "0.0.2",
     "morgan": "^1.7.0",
