--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "marked": "^0.3.6",
     "moment": "^2.18.1",
     "popper.js": "^1.12.5",
+    "socket.io": "^2.0.3",
     "vue": "^2.1.8",
     "vue-gravatar": "^1.1.3",
     "vue-router": "^2.1.1",
