working on socket events, need to stop it connecting to local

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,3 +1,9 @@
 FROM kyma/docker-nginx
-COPY index.html dist public /var/www/
+COPY ./ /var/www/
+
+ADD certs/server.crt /etc/nginx/ssl
+ADD certs/server.key /etc/nginx/ssl 
+
+RUN ln -s /etc/nginx/sites-available/default-ssl /etc/nginx/sites-enabled/default-ssl
+
 CMD ["nginx"]
