--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "deploy": "npm run build:prod && docker push hivemindapps/builtright-client"
   },
   "dependencies": {
+    "autolinker": "^1.4.4",
     "axios": "^0.15.3",
     "bootstrap-vue": "^0.15.6",
     "jquery": "^3.2.1",
