update post almost done

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,4 +6,7 @@ ADD certs/server.key /etc/nginx/ssl
 
 RUN ln -s /etc/nginx/sites-available/default-ssl /etc/nginx/sites-enabled/default-ssl
 
+ENV NODE_ENV=production
+ENV SOCKET_IO=server:3000
+
 CMD ["nginx"]
