updates to docker-compose

--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -8,15 +8,17 @@ services:
       - NODE_ENV=production 
     links:
       - mongo:mongo
-      - redis:redis
+    depends_on:
+      - mongo
 
   web:
     image: hivemindapps/builtright-client:latest 
     ports: 
-      - "80:80"
-      - "443:443"
+      - "8080:80"
     links: 
       - server:server
+    depends_on:
+      - mongo
     environment:
       - NODE_ENV=production
       - API_URL=server:3000
@@ -25,8 +27,5 @@ services:
     image: bitnami/mongodb
     ports: 
       - "27017:27017"
-
-  redis:
-    image: redis
-    ports:
-      - "6379:6379"
+    env_file:
+      - ./server/.env
