updates to password handling, fix signup bugs

--- a/mongo.docker-compose.yml
+++ b/mongo.docker-compose.yml
@@ -18,32 +18,32 @@ services:
       - 9200:9200
       - 9300:9300
 
-  server:
-    build:
-      context: ./server
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    volumes:
-      - .env:/app/.env
-    env_file:
-      - .env 
-    links:
-      - mongo:mongo
-      - elasticsearch:elasticsearch
-
-  web:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
-    ports: 
-      - "8080:80"
-    links:
-      - server:server
-    volumes:
-      - .env:/var/www/.env
-    env_file:
-      - .env 
+#   server:
+#     build:
+#       context: ./server
+#       dockerfile: Dockerfile
+#     ports:
+#       - "3000:3000"
+#     volumes:
+#       - .env:/app/.env
+#     env_file:
+#       - .env 
+#     links:
+#       - mongo:mongo
+#       - elasticsearch:elasticsearch
+# 
+#   web:
+#     build:
+#       context: ./client
+#       dockerfile: Dockerfile
+#     ports: 
+#       - "8080:80"
+#     links:
+#       - server:server
+#     volumes:
+#       - .env:/var/www/.env
+#     env_file:
+#       - .env 
 
 volumes:
   mongodb_master_data:
