--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,6 @@ services:
     ports:
       - 27017:27017
 
-        #  elasticsearch:
-        #    image: 'bitnami/elasticsearch:latest'
-        #    volumes:
-        #      - 'elasticsearch_master_data:/bitnami/elasticsearch'
-        #    ports:
-        #      - 9200:9200
-        #      - 9300:9300
-
   server:
     build:
       context: ./server
@@ -35,32 +27,18 @@ services:
       - "3000:3000"
     links:
       - "mongo:mongo"
-        # - "elasticsearch:elasticsearch"
-        # restart: always
+    restart: always
     depends_on:
-      # - elasticsearch
       - mongo
 
-        #  gui:
-        #    build:
-        #      context: ./client
-        #      dockerfile: Dockerfile
-        #    ports:
-        #      - "8000:80"
-        #    links:
-        #      - "server:server"
-        #    restart: always
-
-    ##  ghost:
-    ##  ghimage: ghost:1-alpine
-    ##  ghports:
-    ##  gh  - "3001:2368"
-    ##  ghvolumes:
-    ##  gh  - /opt/builtright/blog:/var/lib/ghosts
-    ##  ghrestart: always
+  ghost:
+    image: ghost:1-alpine
+    ports:
+      - "3001:2368"
+    volumes:
+      - /opt/builtright/blog:/var/lib/ghost/content
+    restart: always
 
 volumes:
   mongodb_master_data:
     driver: local
-    # elasticsearch_master_data:
-    # eldriver: local
