--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "autolinker": "^1.4.4",
     "axios": "^0.15.3",
+    "buefy": "^0.6.3",
     "jquery": "^3.2.1",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
