--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-version: '2'
-
+version: '3'
 services:
   mongo:
     image: 'bitnami/mongodb:latest'
@@ -32,15 +31,13 @@ services:
     depends_on:
       - mongo
 
-  ghost:
-    image: ghost:1-alpine
-    ports:
-      - "3001:2368"
-    volumes:
-      - /opt/builtright/blog:/var/lib/ghost/content
-    restart: always
-
-    services:
+        #   ghost:
+        #     image: ghost:1-alpine
+        #     ports:
+        #       - "3001:2368"
+        #     volumes:
+        #       - /opt/builtright/blog:/var/lib/ghost/content
+        #     restart: always
 
   mongo-backup:
     image: "istepanov/mongodump:3.4"
@@ -53,4 +50,6 @@ services:
 
 volumes:
   mongodb_master_data:
+    driver: local
+  mongo-backup:
     driver: local
