--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "socket.io": "^2.0.3",
     "vue": "^2.1.8",
     "vue-gravatar": "^1.1.3",
+    "vue-input-tag": "^1.0.3",
     "vue-moment": "^3.1.0",
     "vue-router": "^2.1.1",
     "vue-sweetalert": "^0.1.17",
