--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.15.3",
     "buefy": "^0.6.3",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.10",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
     "popper.js": "^1.12.5",
