--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "popper.js": "^1.12.5",
     "socket.io": "^2.0.3",
     "vue": "^2.1.8",
+    "vue-analytics": "^5.12.2",
     "vue-gravatar": "^1.1.3",
     "vue-input-tag": "^1.0.3",
     "vue-moment": "^3.1.0",
