Update caddyfile with logging directives

--- a/Caddyfile
+++ b/Caddyfile
@@ -15,9 +15,21 @@ builtrightapp.com www.builtrightapp.com {
 }
 
 api.builtrightapp.com {
+  log api_requests.log {
+     rotate_size 50  # Rotate after 50 MB
+    rotate_age  90  # Keep rotated files for 90 days
+    rotate_keep 20  # Keep at most 20 log files
+    rotate_compress # Compress rotated log files in gzip format
+  }
   proxy / localhost:3000
 }
 
 blog.builtrightapp.com {
+  log blog_requests.log {
+    rotate_size 50  # Rotate after 50 MB
+    rotate_age  90  # Keep rotated files for 90 days
+    rotate_keep 20  # Keep at most 20 log files
+    rotate_compress # Compress rotated log files in gzip format
+  }
   proxy / localhost:3001
 }
