--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
-version: '2'
+version: "2"
 services:
+  web:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+
   mongo:
-    image: 'bitnami/mongodb:latest'
+    image: "bitnami/mongodb:latest"
     volumes:
-      - 'mongodb_master_data:/bitnami'
+      - "mongodb_master_data:/bitnami"
     env_file:
       - ./server/.env
     ports:
@@ -31,24 +38,28 @@ services:
     depends_on:
       - mongo
 
+  elastic:
+    image: "bitnami/elasticsearch"
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    restart: always
+    volumes:
+      - "elasticsearch_data:/bitnami"
+
   mongo-backup:
     image: "istepanov/mongodump:3.4"
     volumes:
       - mongo-backup:/backup
     environment:
-      CRON_SCHEDULE: '0 1 * * *'
+      CRON_SCHEDULE: "0 1 * * *"
     depends_on:
       - mongo
-
-        #  elasticsearch:
-        #    image: "bitnami/elasticsearch"
-        #    ports:
-        #      - "9200:9200"
-        #      - "9300:9300"
-        #    restart: always
 
 volumes:
   mongodb_master_data:
     driver: local
   mongo-backup:
+    driver: local
+  elasticsearch_data:
     driver: local
